--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "openzeppelin-solidity": "^2.1.1",
+    "truffle-hdwallet-provider": "^1.0.3",
     "zeppelin-solidity": "^1.12.0"
   },
   "description": "Simple tutorial for connecting to ERC20 contract",
